--- a/about.css
+++ b/about.css
@@ -41,7 +41,7 @@ header {
 }
 
 .logo_container img {
-  width: 65%;
+  width: 300px;
   padding: 4%;
 }
 
@@ -51,9 +51,10 @@ header {
 }
 
 .past_course_card {
-    background-image: url('./media/images/past_events/images.jpg') ;
+    background: url('./media/images/past_events/images.jpg') no-repeat ;
+    background-size: cover;
     width: 100%;
-    height: 30vh;
+    height: 40vh;
     margin: 5% auto;
 }
 
@@ -98,6 +99,12 @@ footer {
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-content: center;
+}
+
+.footer_logo {
+    width: 150px;
+    justify-self: center;
+    margin: 6%;
 }
 
 footer p {
