--- a/about.css
+++ b/about.css
@@ -2,8 +2,14 @@
   text-align: center;
 }
 
-header {
-  text-align: left;
+body {
+  margin: 0%;
+  font-family: 'Lato', sans-serif;
+  overflow: scroll;
+}
+
+.menu_icon_about {
+   float: left;
 }
 
 .header_headlines_description {
@@ -41,8 +47,8 @@ header {
 }
 
 .logo_container img {
-  width: 300px;
-  padding: 4%;
+  width: 200px;
+  padding: 6%;
 }
 
 .past_courses {
@@ -69,9 +75,34 @@ header {
 }
 
 .past_course_card strong {
-  font-size: x-large;
+  font-size: xx-large;
 }
 
-#about_partners, #about_footer {
-  display: block;
+#about_partners {
+  display: flex;
+
+}
+
+.about_partners {
+  flex-direction: column;
+  align-items: center;
+  padding: 5vh ;
+}
+
+.about_partners hr {
+  border: 1px solid tomato;
+  width: 5%;
+  margin: 1vh 0;
+}
+
+#about_footer {
+  background-color: white;
+  color:#272A31;
+}
+
+.past_course_cards {
+  width: 100%;
+  display: flex;
+  flex-direction: column ; 
+
 }
