Fix marging for logo section in about page

--- a/about.css
+++ b/about.css
@@ -43,7 +43,7 @@ body {
   width: 90%;
   border: 2px solid #e0dfdf;
   padding: 0%;
-  margin: 10% auto;
+  margin: 8vh auto;
 }
 
 .logo_container img {
