Fix https warning

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 
-@import url('http://fonts.cdnfonts.com/css/cocogoose');
-@import url('http://fonts.cdnfonts.com/css/lato-light');
+@import url('https://fonts.cdnfonts.com/css/cocogoose');
+@import url('https://fonts.cdnfonts.com/css/lato-light');
 
 * {
   margin: 0%;
